drop font-face data-url + font cleanup The text flickering seems to have fixed itself

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,20 +20,20 @@ font-family: 'Museo Slab 500', Rockwell, Georgia, serif; font-weight: 500;
 body        { margin: 0 auto; width: 1004px; }
 .main       { font-family: 'Proxima Nova Regular', 'Helvetica Neue', Arial, Helvetica, sans-serif; font-size-adjust: 0.488; font-weight: 400; }
 
-/* @todo temporary overrides */
-/* .main       { font-family: 'Helvetica Neue', Arial, Helvetica, sans-serif; font-size-adjust: 0.488; font-weight: 400; min-height: 100%; } */
-
 noscript   { border: red 2px solid; font-size: 1.2857em; font-weight: bold; text-align: center; padding: 5px; z-index: 100; }
 
 .sidebar    { background-color: #74b446; box-shadow: -2px 0 7px #888; color: #fff; height: 100%; margin-left: 768px; min-width: 256px; position: fixed; top: 0; width: 100%;}
 
+.siteHeader
+, .primaryNav { font-family: 'Museo Slab 300', Rockwell, Georgia, serif; font-weight: 300; }
+
 .siteHeader { padding: 10px 0; text-align: center; width: 236px; }
-.siteHeader .kivaLogo a { display: inline-block; width: 103px; height: 60px; overflow: hidden; }
+.siteHeader .kivaLogo a { display: inline-block; width: 103px; height: 102px; overflow: hidden; }
 .siteHeader .kivaLogo a img { min-width: 100%; min-height: 100%; }
 .siteHeader .kivaLogo,
 .siteHeader h2  { font-weight: normal; margin-bottom: 10px; }
 .siteFooter     { background-color: #f7f7f2; height: 20px; text-align: center; }
-.siteFooter .nav-next { margin-top: 20px; width: 100%; }
+.siteFooter .nav-next { margin-top: 20px; width: 90%; }
 
 .primaryNav { border-top: #fff 3px solid; border-bottom: #fff 3px solid; margin-bottom: 20px; padding: 10px 0; position: relative; }
 .primaryNav .nav-prev
@@ -46,8 +46,8 @@ noscript   { border: red 2px solid; font-size: 1.2857em; font-weight: bold; text
 .primaryNav li.active a { border-left: #fff 5px solid; color: #fff; padding-left: 15px; }
 .primaryNav ~ *         { padding: 0 20px; }
 
-.sidebarMisc            { width: 256px; }
-.aboutKiva              { margin-top: 20px; }
+.sidebarMisc            { font-family: 'Proxima Nova Light', 'Helvetica Neue', Arial, Helvetica, sans-serif; font-size-adjust: 0.488; font-weight: 200; width: 280px; }
+.aboutKiva              { margin-top: 10px; }
 
 .main > section { margin-bottom: 40px; }
 
@@ -71,17 +71,9 @@ noscript   { border: red 2px solid; font-size: 1.2857em; font-weight: bold; text
 .fMS {font-family: 'Museo Slab 300', Rockwell, Georgia, serif; font-weight: 300; }
 .fMS.bold { font-family: 'Museo Slab 500', Rockwell, Georgia, serif; font-weight: 500; }
 
-/* @todo temporary overrides */
-.fMS {font-family: Helvetica, Georgia, serif; font-weight: 300; }
-.fMS.bold { font-family: Helvetica, Georgia, serif; font-weight: 500; }
-
 /* Styles */
 .light  { font-family: 'Proxima Nova Light', 'Helvetica Neue', Arial, Helvetica, sans-serif; font-size-adjust: 0.488; font-weight: 200; }
 .bold   { font-family: 'Proxima Nova Semibold', 'Helvetica Neue', Arial, Helvetica, sans-serif; font-weight: 600; }
-
-/* @todo temporary overrides */
-/* .light  { font-family: 'Helvetica Neue', Arial, Helvetica, sans-serif; font-size-adjust: 0.488; font-weight: 200; } */
-.bold   { font-family: 'Helvetica Neue', Arial, Helvetica, sans-serif; font-weight: 600; }
 
 /* Buttons */
 .button                 { background-color: #f1efed; border: #74b446 1px solid; color: #4b9123; display: inline-block; line-height: 1.6429em; padding-right: 1em; padding-left: 1em; vertical-align: bottom; width: 200px; text-align: center;
